# Pic-gEngine

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  syntax.md
dev/demos/: program_cube_physics.c  program_flightsim.c
dev/tools/chop_obj/: chop_obj.py
src/: main.c  program.c  program.c-info  userprogram.h
src/PREPROCESSOR/: OS.h
src/globals/: OS.h  cwd.h.in  gl.h  input.h  macro.h  runtime.c  runtime.h
src/graphics/: debug.c  debug.h  graphicsGL.c  graphicsGL.h  initGL.c
src/graphics/camera/: camera.c  camera.h
src/graphics/lighting/: lightSource.c  lightSource.h
src/graphics/material/: material.c  material.h
src/graphics/mesh/: cubemesh.h  mesh.c  mesh.h  meshObj.h
src/graphics/model/: cube.c  model.c  model.h  modelObj.c  objects.h  physicsmodel.c  physicsmodel.h
src/graphics/object/: cube.c  mesh.c  mesh.h  modelObj.c  objects.h
src/graphics/texture/: image.c  image.h  texture.c  texture.h
src/math/: stringFunctions.c  stringFunctions.h  timer.c  timer.h  transforms.h  vector2D.h  vector3D.c  vector3D.h  vertex3D.h
src/physics/: AABB.h  physicsComponent.c  physicsComponent.h  raycast.h
src/window/: window.c  window.h
user-template/: program.c-info  user-readme.md
windows_compile/: compile.sh
